--- a/index.html
+++ b/index.html
@@ -2,16 +2,148 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Guia Hoteles</title>
+    
+    <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="...">-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
    
+
+
+    <div class="jumbotron">
+      <h1>Hoteles</h1>
+    </div>
+    <div class="container">
+      <div class="d-flex">
+        <div class="col-sm-4">
+          <p>
+            <h3>¿Cómo funciona?</h3>
+            <p>Buscá los hoteles de acuerdo a tu preferencia</p>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <p>
+            <h3>¿Dónde puedo reservar?</h3>
+            <p>Eligira la ciudad que le interese y luego
+              realizá la reserva con tus datos.
+            </p>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <h3>¿Comó pago?</h3>
+          <p>Utiizá tu tarjeta favorita.</p>
+        </div>
+      </div>
+      <hr>
+
+      <div class="d-flex flex-wrap flex-row-reverse">
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel Barcelona</h4>
+            <p>Hotel ubicado en pleno centro de Barcelona
+              a pocos metros de la playa
+            </p>
+          </div>
+          <div>
+            <button class="btn btn-primary btn-reserva">Reservar</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel Buenos Aires</h4>
+            <p>Hotel ubicado en pleno centro
+              a pocos metros de la playa
+            </p>
+          </div>
+          <div>
+            <button class="btn  btn-primary btn-reserva">Reservar</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel Lima</h4>
+            <p>Hotel ubicado en pleno centro</p>
+          </div>
+          <div>
+            <button class="btn  btn-primary btn-reserva">Reservar</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel Rio de Janeiro</h4>
+            <p>Hotel ubicado en pleno centro de rio
+            de janeiro a pocos metros de la playa
+            </p>
+          </div>
+          <div>
+            <button class="btn  btn-primary btn-reserva">Reservar</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel La Paz</h4>
+            <p>Hotel ubicado en pleno centro 
+            </p>
+          </div>
+          <div>
+            <button class="btn  btn-primary btn-reserva">Reservar</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel Madrid</h4>
+            <p>Hotel ubicado en pleno centro
+            </p>
+          </div>
+          <div>
+            <button class="btn  btn-primary btn-reserva">Reservar</button>
+          </div>
+        </div>
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h4>Hotel San Pablo</h4>
+            <p>Hotel ubicado en pleno centro</p>
+          </div>
+          <div>
+            <button class="btn  btn-primary btn-reserva">Reservar</button>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+
+    <footer>
+      <div class="row">
+        <div class="col-sm-4 d-flex flex-column">
+          <a href="http://www.facebook.com">Facebook</a>
+          <a href="http://www.twitter.com">Twitter</a>
+          <a href="http://www.instagram.com">Instagram</a>
+          <a href="http://www.google.com">Google</a>
+        </div>
+        <div class="col-sm-4 d-flex flex-column align-items-center">
+          <address>
+            <h3>Oficina Central</h3>
+            <p>Tucuman 834, Caba, Cuba</p>
+            <p>-839457350</p>
+            <p>contacto@guiahoteles.com</p>
+          </address>
+        </div>
+        <div class="col-sm-4 d-flex flex-column align-items-end">
+          <a href="http://www.facebook.com">Nosotros</a>
+          <a href="http://www.twitter.com">Precios</a>
+          <a href="http://www.instagram.com">Terminos y condiciones</a>
+          <a href="http://www.google.com">Contacto</a>
+        </div>  
+      </div>   
+    </footer>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
+ 
+  </body>
+</html>
