Se creo about.hmtl y se agrego barra nav

--- a/index.html
+++ b/index.html
@@ -12,14 +12,31 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-   
-
-
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a href="#" class="navbar-brand">Hoteles</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="/about.html" class="nav-link">Nosotros</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Términos y Condiciones</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="jumbotron">
       <h1>Hoteles</h1>
     </div>
     <div class="container">
-      <div class="d-flex">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">Home</li>
+        </ol>
+      </nav>
+      <div class="row">
         <div class="col-sm-4">
           <p>
             <h3>¿Cómo funciona?</h3>
@@ -35,8 +52,10 @@
           </p>
         </div>
         <div class="col-sm-4">
-          <h3>¿Comó pago?</h3>
-          <p>Utiizá tu tarjeta favorita.</p>
+          <p>
+            <h3>¿Comó pago?</h3>
+            <p>Utiizá tu tarjeta favorita.</p>
+          </p>
         </div>
       </div>
       <hr>
@@ -141,9 +160,12 @@
         </div>  
       </div>   
     </footer>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
  
   </body>
 </html>
