Se descargo la paqueteria useicon y se colocaron icons

--- a/about.html
+++ b/about.html
@@ -7,9 +7,10 @@
 
     <title>Guia Hoteles</title>
     
-    <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="...">-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="...">
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">-->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -58,9 +59,9 @@
         <div class="col-sm-4 d-flex flex-column align-items-center">
           <address>
             <h3>Oficina Central</h3>
-            <p>Tucuman 834, Caba, Cuba</p>
-            <p>-839457350</p>
-            <p>contacto@guiahoteles.com</p>
+            <p><span class="oi oi-home footer-address-icon"></span>Tucuman 834, Caba, Cuba</p>
+            <p><span class="oi oi-phone footer-address-icon"></span>+839457350</p>
+            <p><span class="oi oi-inbox footer-address-icon"></span>contacto@guiahoteles.com</p>
           </address>
         </div>
         <div class="col-sm-4 d-flex flex-column align-items-end">
@@ -74,9 +75,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
+    <!--<script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
  
   </body>
 </html>
