--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="...">-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -69,7 +70,7 @@
             </p>
           </div>
           <div>
-            <button class="btn btn-primary btn-reserva">Reservar</button>
+            <button class="btn btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -80,7 +81,7 @@
             </p>
           </div>
           <div>
-            <button class="btn  btn-primary btn-reserva">Reservar</button>
+            <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -89,7 +90,7 @@
             <p>Hotel ubicado en pleno centro</p>
           </div>
           <div>
-            <button class="btn  btn-primary btn-reserva">Reservar</button>
+            <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -100,7 +101,7 @@
             </p>
           </div>
           <div>
-            <button class="btn  btn-primary btn-reserva">Reservar</button>
+            <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -110,7 +111,7 @@
             </p>
           </div>
           <div>
-            <button class="btn  btn-primary btn-reserva">Reservar</button>
+            <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -120,7 +121,7 @@
             </p>
           </div>
           <div>
-            <button class="btn  btn-primary btn-reserva">Reservar</button>
+            <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
         <div class="card-hotel d-flex flex-column justify-content-between">
@@ -129,7 +130,7 @@
             <p>Hotel ubicado en pleno centro</p>
           </div>
           <div>
-            <button class="btn  btn-primary btn-reserva">Reservar</button>
+            <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
       </div>
@@ -147,9 +148,9 @@
         <div class="col-sm-4 d-flex flex-column align-items-center">
           <address>
             <h3>Oficina Central</h3>
-            <p>Tucuman 834, Caba, Cuba</p>
-            <p>-839457350</p>
-            <p>contacto@guiahoteles.com</p>
+            <p><span class="oi oi-home footer-address-icon"></span>Tucuman 834, Caba, Cuba</p>
+            <p><span class="oi oi-phone footer-address-icon"></span>+839457350</p>
+            <p><span class="oi oi-inbox footer-address-icon"></span>contacto@guiahoteles.com</p>
           </address>
         </div>
         <div class="col-sm-4 d-flex flex-column align-items-end">
