--- a/contacto.html
+++ b/contacto.html
@@ -21,10 +21,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="#" class="nav-link">Nosotros</a></li>
+          <li class="nav-item"><a href="/about.html" class="nav-link">Nosotros</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Términos y Condiciones</a></li>
-          <li class="nav-item"><a href="/contacto.html" class="nav-link">Contacto</a></li>
+          <li class="nav-item active"><a href="#" class="nav-link">Contacto</a></li>
         </ul>
       </div>
     </nav>
@@ -35,17 +35,55 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
+          <li class="breadcrumb-item active" aria-current="page">Contacto</li>
         </ol>
       </nav>
-      <span>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </span>
+
+      <h1>Dejame tu comentario</h1>
+      <form>
+        <div class="form-row">
+          <div class="form-group col-sm-6">
+            <label for="nombre" >Nombre</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
+          </div>
+          <div class="form-group col-sm-6">
+            <label for="apellido" >Apellido</label>
+            <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email" >Email</label>
+          <input type="email" class="form-control" id="email" placeholder="Ingrese su email">
+        </div>
+        <div class="form-row">
+          <div class="form-group col-sm-9">
+            <label for="domicilio" >Domicilio</label>
+            <input type="text" class="form-control" id="domicilio" placeholder="Ingrese su domicilio">
+          </div>
+          <div class="form-group col-sm-3">
+            <label for="estado" >Estado</label>
+            <select id="estado" class="form-control">
+              <option selected>CDMX</option>
+              <option >Hidalgo</option>
+              <option >Guanajuato</option>
+              <option >Monterrey</option>
+              <option >Estado de Mexico</option>
+              <option >Queretaro</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="cometarios">Comentarios</label>
+          <input type="text" class="form-control" id="comentarios" row="10">
+        </div>
+        <div class="form-group">
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="gridCheck">
+            <label for="gridCheck" class="form-check-label">Quiero que me contacten</label>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
     </div>
 
     <footer>
