--- a/precios.html
+++ b/precios.html
@@ -21,8 +21,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="#" class="nav-link">Nosotros</a></li>
-          <li class="nav-item"><a href="/precios.html" class="nav-link">Precios</a></li>
+          <li class="nav-item "><a href="/about.html" class="nav-link">Nosotros</a></li>
+          <li class="nav-item active"><a href="#" class="nav-link">Precios</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Términos y Condiciones</a></li>
           <li class="nav-item"><a href="/contacto.html" class="nav-link">Contacto</a></li>
         </ul>
@@ -35,19 +35,59 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
+          <li class="breadcrumb-item active" aria-current="page">Precios</li>
         </ol>
       </nav>
-      <span>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </span>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead class="thead-dark">
+            <th>Calidad</th>
+            <th>Iztapalapa</th>
+            <th>Lerma</th>
+            <th>Azcapotzalco</th>
+            <th>Xocihimilco</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td><span class="oi oi-star"></span></td>
+              <td>$231</td>
+              <td>$233</td>
+              <td>$321</td>
+              <td>$123</td>
+            </tr>
+            <tr>
+              <td><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+              <td>$432</td>
+              <td>$413</td>
+              <td>$345</td>
+              <td>$543</td>
+            </tr>
+            <tr>
+              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+              <td>$543</td>
+              <td>$634</td>
+              <td>$432</td>
+              <td>$572</td>
+            </tr>
+            <tr>
+              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+              <td>$632</td>
+              <td>$413</td>
+              <td>$945</td>
+              <td>$743</td>
+            </tr>
+            <tr>
+              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+              <td>$1543</td>
+              <td>$1334</td>
+              <td>$1632</td>
+              <td>$1572</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-
+    
     <footer>
       <div class="row">
         <div class="col-sm-4 d-flex flex-column">
