--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
       <hr>
 
       <div class="d-flex flex-wrap flex-row-reverse">
-        <div class="card-hotel d-flex flex-column justify-content-between">
-          <div>
-            <h4>Hotel Barcelona</h4>
-            <p>Hotel ubicado en pleno centro de Barcelona
+        <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <div class="card-body">
+            <h5 class="card-title">Hotel Barcelona</h5>
+           <h6 class="crad-subtitle">España</h6>
+            <p class="card-text">Hotel ubicado en pleno centro de Barcelona
               a pocos metros de la playa
             </p>
           </div>
@@ -73,10 +74,11 @@
             <button class="btn btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
-        <div class="card-hotel d-flex flex-column justify-content-between">
-          <div>
-            <h4>Hotel Buenos Aires</h4>
-            <p>Hotel ubicado en pleno centro
+        <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <div class="card-body">
+            <h5 class="card-title">Hotel Buenos Aires</h5>
+            <h6>Argentina</h6>
+            <p class="card-text">Hotel ubicado en pleno centro
               a pocos metros de la playa
             </p>
           </div>
@@ -84,19 +86,21 @@
             <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
-        <div class="card-hotel d-flex flex-column justify-content-between">
+        <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <div>
-            <h4>Hotel Lima</h4>
-            <p>Hotel ubicado en pleno centro</p>
+            <h5 class="card-title">Hotel Lima</h5>
+            <h6 class="card-subtitle">Peru</h6>
+            <p class="card-text">Hotel ubicado en pleno centro</p>
           </div>
           <div>
             <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
-        <div class="card-hotel d-flex flex-column justify-content-between">
+        <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <div>
-            <h4>Hotel Rio de Janeiro</h4>
-            <p>Hotel ubicado en pleno centro de rio
+            <h5 class="card-title">Hotel Rio de Janeiro</h5>
+            <h6 class="card-subtitle">Brasil</h6>
+            <p class="card-text">Hotel ubicado en pleno centro de rio
             de janeiro a pocos metros de la playa
             </p>
           </div>
@@ -104,30 +108,33 @@
             <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
-        <div class="card-hotel d-flex flex-column justify-content-between">
+        <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <div>
-            <h4>Hotel La Paz</h4>
-            <p>Hotel ubicado en pleno centro 
+            <h5 class="card-title">Hotel La Paz</h5 class="card-title">
+            <h6 class="card-subtitle">Mexico</h6>
+            <p class="card-text">Hotel ubicado en pleno centro 
             </p>
           </div>
           <div>
             <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
-        <div class="card-hotel d-flex flex-column justify-content-between">
+        <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <div>
-            <h4>Hotel Madrid</h4>
-            <p>Hotel ubicado en pleno centro
+            <h5 class="card-title">Hotel Madrid</h5>
+            <h6 class="card-subtitle">España</h6>
+            <p class="card-text">Hotel ubicado en pleno centro
             </p>
           </div>
           <div>
             <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
-        <div class="card-hotel d-flex flex-column justify-content-between">
+        <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <div>
-            <h4>Hotel San Pablo</h4>
-            <p>Hotel ubicado en pleno centro</p>
+            <h5 class="card-title">Hotel San Pablo</h5>
+            <h6 class="card-subtitle">Brasil</h6>
+            <p class="card.text">Hotel ubicado en pleno centro</p>
           </div>
           <div>
             <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
