--- a/precios.html
+++ b/precios.html
@@ -88,15 +88,28 @@
       </div>
     </div>
     
+    <div class="d-flex justify-content-center">
+      <div class="card" style="width: 18rem;">
+        <div class="card-header">
+          Tarjetas aceptadas
+        </div>
+        <ul class="list-group list-group-flush">
+          <l class="list-group-item">Tarjeta Básica</l>
+          <l class="list-group-item">Tarjeta VIP</l>
+          <l class="list-group-item">Tarjeta Black</l>
+        </ul>
+      </div>
+    </div>
+
     <footer>
       <div class="row">
-        <div class="col-sm-4 d-flex flex-column">
+        <div class="col-sm-4 d-flex flex-column ">
           <a href="http://www.facebook.com">Facebook</a>
           <a href="http://www.twitter.com">Twitter</a>
           <a href="http://www.instagram.com">Instagram</a>
           <a href="http://www.google.com">Google</a>
         </div>
-        <div class="col-sm-4 d-flex flex-column align-items-center">
+        <div class="col-sm-4 ">
           <address>
             <h3>Oficina Central</h3>
             <p><span class="oi oi-home footer-address-icon"></span>Tucuman 834, Caba, Cuba</p>
