--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
       </div>
       <hr>
 
+      <!--<img src="images/playa.jpg" class="img-fluid" alt="Responsive image">-->
+
       <div class="d-flex flex-wrap flex-row-reverse">
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div class="card-body">
             <h5 class="card-title">Hotel Barcelona</h5>
            <h6 class="crad-subtitle">España</h6>
@@ -75,6 +78,7 @@
           </div>
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div class="card-body">
             <h5 class="card-title">Hotel Buenos Aires</h5>
             <h6>Argentina</h6>
@@ -87,6 +91,7 @@
           </div>
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div>
             <h5 class="card-title">Hotel Lima</h5>
             <h6 class="card-subtitle">Peru</h6>
@@ -97,6 +102,7 @@
           </div>
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div>
             <h5 class="card-title">Hotel Rio de Janeiro</h5>
             <h6 class="card-subtitle">Brasil</h6>
@@ -109,6 +115,7 @@
           </div>
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div>
             <h5 class="card-title">Hotel La Paz</h5 class="card-title">
             <h6 class="card-subtitle">Mexico</h6>
@@ -120,6 +127,7 @@
           </div>
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div>
             <h5 class="card-title">Hotel Madrid</h5>
             <h6 class="card-subtitle">España</h6>
@@ -131,6 +139,7 @@
           </div>
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+          <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div>
             <h5 class="card-title">Hotel San Pablo</h5>
             <h6 class="card-subtitle">Brasil</h6>
