--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="/node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
   </head>
   <body>
+   <!--- <div class="alert alert-warning alert-dismissible fade show fixed-top" role="alert">
+      <strong>Nuevos viajes!</strong>Entra a nuestra seccion del Caribe para conocer las nuevas propuestas
+      <button class="close" type="button" data-dismiss="alert" aria-label="close">
+        <span aria-label="true">&times;</span>
+      </button>
+    </div>-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a href="#" class="navbar-brand">Hoteles</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
