--- a/precios.html
+++ b/precios.html
@@ -38,66 +38,88 @@
           <li class="breadcrumb-item active" aria-current="page">Precios</li>
         </ol>
       </nav>
-      <div class="table-responsive">
-        <table class="table table-striped">
-          <thead class="thead-dark">
-            <th>Calidad</th>
-            <th>Iztapalapa</th>
-            <th>Lerma</th>
-            <th>Azcapotzalco</th>
-            <th>Xocihimilco</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td><span class="oi oi-star"></span></td>
-              <td>$231</td>
-              <td>$233</td>
-              <td>$321</td>
-              <td>$123</td>
-            </tr>
-            <tr>
-              <td><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
-              <td>$432</td>
-              <td>$413</td>
-              <td>$345</td>
-              <td>$543</td>
-            </tr>
-            <tr>
-              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
-              <td>$543</td>
-              <td>$634</td>
-              <td>$432</td>
-              <td>$572</td>
-            </tr>
-            <tr>
-              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
-              <td>$632</td>
-              <td>$413</td>
-              <td>$945</td>
-              <td>$743</td>
-            </tr>
-            <tr>
-              <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
-              <td>$1543</td>
-              <td>$1334</td>
-              <td>$1632</td>
-              <td>$1572</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    
-    <div class="d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-        <div class="card-header">
-          Tarjetas aceptadas
+      <ul class="nav nav-pills" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a href="#compara" role="tab" aria-controls="compara" class="nav-link active" 
+          id="compara-tab" aria-selected="true" data-toggle="pill">Compara</a>
+        </li>
+        <li class="nav-item">
+          <a href="#tarjetas" role="tab" aria-controls="tarjetas" class="nav-link" 
+          id="tarjetas-tab" aria-selected="false" data-toggle="pill">Tarjetas</a>
+        </li>
+        <li class="nav-item">
+          <a href="#comentarios" role="tab" aria-controls="comentarios" class="nav-link" 
+          id="comentarios-tab" aria-selected="flase" data-toggle="pill">Comentarios</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="compara" role="tabpanel"
+        aria-labelledby="compara-tab">
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead class="thead-dark">
+              <th>Calidad</th>
+              <th>Iztapalapa</th>
+              <th>Lerma</th>
+              <th>Azcapotzalco</th>
+              <th>Xocihimilco</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td><span class="oi oi-star"></span></td>
+                <td>$231</td>
+                <td>$233</td>
+                <td>$321</td>
+                <td>$123</td>
+              </tr>
+              <tr>
+                <td><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+                <td>$432</td>
+                <td>$413</td>
+                <td>$345</td>
+                <td>$543</td>
+              </tr>
+              <tr>
+                <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+                <td>$543</td>
+                <td>$634</td>
+                <td>$432</td>
+                <td>$572</td>
+              </tr>
+              <tr>
+                <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+                <td>$632</td>
+                <td>$413</td>
+                <td>$945</td>
+                <td>$743</td>
+              </tr>
+              <tr>
+                <td><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span></td>
+                <td>$1543</td>
+                <td>$1334</td>
+                <td>$1632</td>
+                <td>$1572</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <ul class="list-group list-group-flush">
-          <l class="list-group-item">Tarjeta Básica</l>
-          <l class="list-group-item">Tarjeta VIP</l>
-          <l class="list-group-item">Tarjeta Black</l>
-        </ul>
+        </div>
+        <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+          <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+              <div class="card-header" style="background-color: blue; color:white;">
+                Tarjetas aceptadas
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Tarjeta básica</li>
+                <li class="list-group-item">Tarjeta VIP</li>
+                <li class="list-group-item">Tarjeta Black</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
+        Comentarios</div>
       </div>
     </div>
 
@@ -109,7 +131,7 @@
           <a href="http://www.instagram.com">Instagram</a>
           <a href="http://www.google.com">Google</a>
         </div>
-        <div class="col-sm-4 ">
+        <div class="col-sm-4 d-flex flex-column align-items-center">
           <address>
             <h3>Oficina Central</h3>
             <p><span class="oi oi-home footer-address-icon"></span>Tucuman 834, Caba, Cuba</p>
