Se agregaron tarjetas en precios

--- a/index.html
+++ b/index.html
@@ -43,22 +43,33 @@
           <li class="breadcrumb-item active" aria-current="page">Home</li>
         </ol>
       </nav>
-      <div class="row">
+      
+       <div class="row">
         <div class="col-sm-4">
+          <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#funciona" aria-expanded="false" aria-controls="multiCollapse1">¿Cómo funciona?</button>
+        </div>
+        <div class="col-sm-4">
+          <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#reserva" aria-expanded="false" aria-controls="multiCollapse2">¿Dónde puedo reservar?</button>
+        </div>
+        <div class="col-sm-4">
+          <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#pago" aria-expanded="false" aria-controls="multiCollapse3">¿Cómo pago</button>
+        </div>
+       </div>
+      <div class="row">
+        <div class="col-sm-4 collapse multi-collapse" id="funciona">
           <p>
             <h3>¿Cómo funciona?</h3>
             <p>Buscá los hoteles de acuerdo a tu preferencia</p>
           </p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 collapse multi-colapse" id="reserva">
           <p>
             <h3>¿Dónde puedo reservar?</h3>
             <p>Eligira la ciudad que le interese y luego
-              realizá la reserva con tus datos.
-            </p>
+              realizá la reserva con tus datos.</p>
           </p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 collapse multi-collapse" id="pago">
           <p>
             <h3>¿Comó pago?</h3>
             <p>Utiizá tu tarjeta favorita.</p>
