--- a/precios.html
+++ b/precios.html
@@ -103,24 +103,69 @@
             </tbody>
           </table>
         </div>
-        </div>
+      </div>
+        
         <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
-          <div class="d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
-              <div class="card-header" style="background-color: blue; color:white;">
-                Tarjetas aceptadas
+          <div class="accordion" id="accordionTarjetas">
+            <div class="card">
+              <div class="card-header" id="headingOne">
+                <h5 class="mb-0">
+                  <button class="btn btn-link" type="button" data-toggle="collapse"
+                  data-target="#collapseBasica" aria-expanded="true" aria-controls="collpseBasica">
+                    Tarjeta Basica
+                  </button>
+                </h5>
               </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Tarjeta básica</li>
-                <li class="list-group-item">Tarjeta VIP</li>
-                <li class="list-group-item">Tarjeta Black</li>
-              </ul>
+    
+              <div class="collapse show" id="collapseBasica" aria-labelledby="headingOne"
+              data-parent="#accordionTarjetas">
+                <div class="card-body">
+                  Puedes reservar en 3 cuotas sin interés.
+                </div>
+              </div>
             </div>
-          </div>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                  data-target="#collapseVIP" aria-expanded="false" aria-controls="collapseVIP">
+                    Tarjeta VIP
+                  </button>
+                </h5>
+              </div>
+              <div class="collapse" id="collapseVIP" aria-labelledby="headingTwo"
+              data-parent="#accordionTarjetas">
+              <div class="card-body">
+                Puedes reservar en 6 cuotas sin interés.
+                Al llegar, recibirás una canasta de obsequios para disfrutar con
+                tu familia.
+              </div>
+             </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                  data-target="#collapseBlack" aria-expanded="false" aria-controls="collapsedBlack">
+                    Tarejeta Black
+                  </button>
+                </h5>
+              </div>
+              <div class="collapse" id="collapseBlack" aria-labelledby="headingThree"
+              data-parent="#accordionTarjetas">
+                <div class="card-body">
+                  Puedes reservare en 12 cuotas sin interés. Al llegar recibirás una canasta
+                  de obsequios para disfrutar cin tu familia y un acceso al gimnasio y spa todos 
+                  los dias de tus vacaciones.
+                </div>
+              </div>
+            </div>
+          </div >
         </div>
         <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
         Comentarios</div>
       </div>
+    </div>
     </div>
 
     <footer>
