--- a/index.html
+++ b/index.html
@@ -78,14 +78,37 @@
       </div>
       <hr>
 
+      <div class="carousel slide" id="carouselControls" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item ">
+            <img src="./images/España.jpg" alt="Primer slide" class="d-blcok w-100">
+          </div>
+          <div class="carousel-item active">
+            <img src="./images/Mexico.jpg" alt="Segundo slide" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="./images/brasil.webp" alt="Tercer slide" class="d-block w-100">
+          </div>
+        </div>
+        <a href="#carouselControls" role="button" data-slide="next" class="carousel-control-prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a href="#carouselControls" role="button" data-slide="next" class="carousel-control-next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Siguiente</span>
+        </a>
+      </div>
+
       <!--<img src="images/playa.jpg" class="img-fluid" alt="Responsive image">-->
 
       <div class="d-flex flex-wrap flex-row-reverse">
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div class="card-body">
-            <h5 class="card-title">Hotel Barcelona</h5>
-           <h6 class="crad-subtitle">España</h6>
+            <h5 class="card-title" data-toggle="tooltip" data-placement="top" title="Las primeras 
+            reservas cuentas con clases de tango gratis">Hotel Barcelona</h5>
+           <h6 class="card-subtitle text-muted">España</h6>
             <p class="card-text">Hotel ubicado en pleno centro de Barcelona
               a pocos metros de la playa
             </p>
@@ -98,7 +121,7 @@
           <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
           <div class="card-body">
             <h5 class="card-title">Hotel Buenos Aires</h5>
-            <h6>Argentina</h6>
+            <h6 class="card-subtitle text-muted">Argentina</h6>
             <p class="card-text">Hotel ubicado en pleno centro
               a pocos metros de la playa
             </p>
@@ -109,20 +132,20 @@
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
-          <div>
+          <div class="card-body">
             <h5 class="card-title">Hotel Lima</h5>
-            <h6 class="card-subtitle">Peru</h6>
+            <h6 class="card-subtitle text-muted">Peru</h6>
             <p class="card-text">Hotel ubicado en pleno centro</p>
           </div>
           <div>
-            <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
+            <button class="btn  btn-primary btn-reserva" data-toggle="popover" title="Promociones" data-content="Consulta las promociones vigentes"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
-          <div>
+          <div class="card-body">
             <h5 class="card-title">Hotel Rio de Janeiro</h5>
-            <h6 class="card-subtitle">Brasil</h6>
+            <h6 class="card-subtitle text-muted">Brasil</h6>
             <p class="card-text">Hotel ubicado en pleno centro de rio
             de janeiro a pocos metros de la playa
             </p>
@@ -133,9 +156,9 @@
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
-          <div>
+          <div class="card-body">
             <h5 class="card-title">Hotel La Paz</h5 class="card-title">
-            <h6 class="card-subtitle">Mexico</h6>
+            <h6 class="card-subtitle text-muted">Mexico</h6>
             <p class="card-text">Hotel ubicado en pleno centro 
             </p>
           </div>
@@ -145,9 +168,9 @@
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
-          <div>
+          <div class="card-body">
             <h5 class="card-title">Hotel Madrid</h5>
-            <h6 class="card-subtitle">España</h6>
+            <h6 class="card-subtitle text-muted">España</h6>
             <p class="card-text">Hotel ubicado en pleno centro
             </p>
           </div>
@@ -157,17 +180,82 @@
         </div>
         <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
           <img src="images/arenero.webp" class="card-img-top" alt="Responsive image">
-          <div>
+          <div class="card-body">
             <h5 class="card-title">Hotel San Pablo</h5>
-            <h6 class="card-subtitle">Brasil</h6>
-            <p class="card.text">Hotel ubicado en pleno centro</p>
+            <h6 class="card-subtitle text-muted">Brasil</h6>
+            <p class="card-text">Hotel ubicado en pleno centro</p>
+            <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#contacto">Contacto</button>
           </div>
           <div>
-            <button class="btn  btn-primary btn-reserva"><span class ="oi oi-plus"></span>Reservar</button>
+            <button class="btn  btn-primary btn-reserva" data-toggle="modal" data-target="#reservarInfo"><span class ="oi oi-plus"></span>Reservar</button>
           </div>
         </div>
       </div>
-      
+      <!--Modals Ejemplos y como usarlos-->
+      <div class="modal fade" id="contacto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Contacto con el hotel</h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form >
+                <div class="form-group">
+                  <label for="recipient-name" class="col-form-label">Tu email:</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="col-form-label">Mensaje:</label>
+                  <textarea id="message-text" class="form-control"></textarea>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-success">Enviar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="reservarInfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Datos de reservación</h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form >
+                <div class="form-group">
+                  <label for="guest-mail" class="col-form-label">Tu email:</label>
+                  <input type="text" class="form-control" id="guest-mail">
+                </div>
+                <div class="form-group">
+                  <label for="guest-phone" class="col-form-label">Tu numero telefonico:</label>
+                  <input type="text" class="form-control" id="guest-phone">
+                </div>
+                <div class="form-group">
+                  <label for="guest-name" class="col-form-label">Nombre del Huespéd:</label>
+                  <input type="text" class="form-control" id="guest-name">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-success">Enviar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      </div>
+
     </div>
 
     <footer>
@@ -197,6 +285,16 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script> 
+      $(function(){
+        $("[data-toggle='tooltip']").tooltip();
+        $("[data-toggle='popover']").popover();
+        $('.carousel').carousel({
+          interval : 2000
+        });
+      });
+    </script>
+      
     <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
