--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="...">-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styles2.css">
     <link rel="stylesheet" href="/node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
   </head>
   <body>
@@ -78,7 +78,7 @@
       </div>
       <hr>
 
-      <div class="carousel slide" id="carouselControls" data-ride="carousel">
+      <div class="carousel slide" id="carouselControls" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item ">
             <img src="./images/España.jpg" alt="Primer slide" class="d-blcok w-100">
@@ -184,7 +184,7 @@
             <h5 class="card-title">Hotel San Pablo</h5>
             <h6 class="card-subtitle text-muted">Brasil</h6>
             <p class="card-text">Hotel ubicado en pleno centro</p>
-            <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#contacto">Contacto</button>
+            <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#contacto" id="contactoBtn">Contacto</button>
           </div>
           <div>
             <button class="btn  btn-primary btn-reserva" data-toggle="modal" data-target="#reservarInfo"><span class ="oi oi-plus"></span>Reservar</button>
@@ -292,6 +292,16 @@
         $('.carousel').carousel({
           interval : 2000
         });
+
+        $('#contacto').on('show.bs.modal',  (e)  => {
+          $('#contactoBtn').removeClass('btn-outline-success').addClass('btn-primary').prop('disabled',true);
+        });
+
+        $('#contacto').on('hidden.bs.modal',  (e)  => {
+          $('#contactoBtn').prop('disabled',false);
+        });
+
+
       });
     </script>
       
