--- a/precios.html
+++ b/precios.html
@@ -49,7 +49,7 @@
         </li>
         <li class="nav-item">
           <a href="#comentarios" role="tab" aria-controls="comentarios" class="nav-link" 
-          id="comentarios-tab" aria-selected="flase" data-toggle="pill">Comentarios</a>
+          id="comentarios-tab" aria-selected="false" data-toggle="pill">Comentarios</a>
         </li>
       </ul>
       <div class="tab-content" id="myTabContent">
@@ -165,7 +165,7 @@
         <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
         Comentarios</div>
       </div>
-    </div>
+     </div>
     </div>
 
     <footer>
