se agrego varias dependencias

--- a/precios.html
+++ b/precios.html
@@ -8,9 +8,11 @@
     <title>Guia Hoteles</title>
     
     <!--<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="...">-->
+    <!-- build:css dist/precios.css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="/node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
+    <!-- endbuild -->
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -192,9 +194,11 @@
         </div>  
       </div>   
     </footer>
+    <!-- build:js dist/precios.js -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- endbuild-->
     <!--<script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/popper.js/dist/popper.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
