--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Guia Hoteles</title>
     
     <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" integrity="...">-->
+    <!-- build:css dist/index.css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">
-    <link rel="stylesheet" href="css/styles2.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="/node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
+    <!-- endbuild -->
   </head>
   <body>
    <!--- <div class="alert alert-warning alert-dismissible fade show fixed-top" role="alert">
@@ -282,6 +284,7 @@
         </div>  
       </div>   
     </footer>
+    <!-- build:js dist/index.js -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -304,6 +307,7 @@
 
       });
     </script>
+    <!-- endbuild -->
       
     <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
